- A **sua mão** do poker agora mostra quantas fichas você tem.
- Agora é possível _descartar_ plantações da `/fazendinha`. Útil para caso tu tenha plantado uma erva sem querer.
- **Novos Campos** - Agora é possível comprar novos campos para a sua fazenda! Use o comando `/fazendinha administrar campos` para comprá-los!
- Os botões da fazendinha agora mostram qual planta está plantada no campo.
- Agora é possível remover o seu título do perfil no `/personalizar título`

### Changed

- O comando `/roleta` agora define a cor da mensagem para a cor do número que saiu.
- Todos os temas tiveram uma redução em seu preço de **30%**
- A planta `bergamota` foi renomeada para `couve`.
- O campo que está plantado agora aparece no botão de seus campos no `/fazendinha plantações`
- Comandos com usos negativos (comandos renomeados) não aparecem mais no `/top usos comandos`
- Ao clicar no botão `Buscar` do `/top transações`, a página buscada volta a ser a primeira

### Fixed

- Corrigido um bug no perfil `Girassóis` onde caso o usuário não tivesse nenhum título equipado, o comando gerava um erro.

## [5.10.2] - 2023-11-04

### Added

- Agora é possível filtrar as transações em `/transações`
- Ao comprar um tema na Menhera, você pode ativá-lo rapidamente clicando no botão da mensagem.

### Changed

- A mensagem de vender plantas mostra quantas estrelinhas você possui.

## [5.10.1] - 2023-11-02

### Added

- **Títulos** - O sistema de títulos lançou! Atualmente, apenas usuários que compraram um título no evento de Halloween devem possuir um título, que pode ser ativado em `/personalizar títulos`
- _Novo Comando_ `personalizar títulos`
- Novos temas de perfil: `Girassóis` e `Galeria`
- Novo tema de fundo de carta: `Noturna`
- Novas badges de votos adicionadas! Agora existem badges de votos para: 50, 100, 200, 300, 400, 500 e 1000 votos!
- Os TOPs que mostravam dados de caças agora possuem um botão para acessar o ranking semanal.